--- a/src/main/resources/checkEmail.fxml
+++ b/src/main/resources/checkEmail.fxml
@@ -3,7 +3,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
@@ -11,7 +13,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="login_container" stylesheets="verifCode.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.RestPwdController" >
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.bty.Controllers.CheckEmailController" styleClass="login_container" stylesheets="verifCode.css">
     <VBox prefHeight="400.0" prefWidth="200.0" styleClass="login_logo_container" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
         <Text fill="#ef2424" strokeType="OUTSIDE" strokeWidth="0.0" text="FlexFlow" wrappingWidth="104.017578125">
             <stroke>
@@ -33,14 +35,17 @@
     </VBox>
     <VBox layoutX="232.0" layoutY="8.0" prefHeight="347.0" prefWidth="354.0" styleClass="login_form_container" AnchorPane.rightAnchor="15.0" AnchorPane.topAnchor="8.0">
         <Label fx:id="error_lbl" styleClass="error_lbl" />
-        <Label alignment="TOP_CENTER" contentDisplay="CENTER" style="-fx-font-weight: bold; -fx-alignment: center; -fx-font-size: 20px;" text="réinitialiser le mot de passe" textAlignment="CENTER">
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets></Label>
-      <Label layoutX="10.0" layoutY="45.0" text="nouveau mot de passe" />
-        <PasswordField fx:id="newPwd_txtfd" prefHeight="25.0" prefWidth="235.0" styleClass="input_field" />
-      <Label layoutX="10.0" layoutY="28.0" text="confirmer le nouveau mot de passe" />
-      <PasswordField fx:id="confrmPwd_txtfd1" layoutX="10.0" layoutY="63.0" prefHeight="25.0" prefWidth="235.0" styleClass="input_field" />
-        <Button fx:id="resetpwd_btn" mnemonicParsing="false" onAction="#resetPWD" prefHeight="25.0" prefWidth="96.0" text="Enter" />
+        <Label alignment="TOP_CENTER" contentDisplay="CENTER" style="-fx-font-weight: bold; -fx-alignment: center; -fx-font-size: 20px;" text="veuillez saisir votre email !" textAlignment="CENTER">
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets></Label>
+        <Label layoutX="10.0" layoutY="84.0" text="email" />
+        <TextField fx:id="userEmail_txtfd" layoutX="10.0" layoutY="76.0" prefHeight="25.0" prefWidth="235.0" styleClass="input_field" />
+        <Button fx:id="checkEmail_btn" mnemonicParsing="false" onAction="#goToCodeVerif" prefHeight="25.0" prefWidth="96.0" text="Enter" />
+      <ImageView fitHeight="229.0" fitWidth="354.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@undraw_Forgot_password_re_hxwm.png" />
+         </image>
+      </ImageView>
     </VBox>
 </AnchorPane>
