--- a/src/main/resources/dashboardX.fxml
+++ b/src/main/resources/dashboardX.fxml
@@ -67,7 +67,7 @@
                         <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="42.0" layoutY="354.0" size="20" />
                         <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="41.0" layoutY="400.0" size="20" />
                         <FontAwesomeIconView fill="WHITE" glyphName="SHOPPING_CART" layoutX="43.0" layoutY="444.0" size="20" />
-                        <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="42.0" layoutY="488.0" size="20" text="" />
+                        <FontAwesomeIconView fill="WHITE" glyphName="ID_CARD" layoutX="42.0" layoutY="488.0" size="20" text="" />
                         <FontAwesomeIconView fill="WHITE" glyphName="EXTERNAL_LINK" layoutX="40.0" layoutY="633.0" size="20" />
                         <Button fx:id="commande_btn1" layoutX="22.0" layoutY="508.0" mnemonicParsing="false" onAction="#goToPayment" prefHeight="35.0" prefWidth="180.0" styleClass="nav-btn" stylesheets="dashboardDesign.css" text="Transaction" />
                         <FontAwesomeIconView fill="WHITE" glyphName="HANDSHAKE_ALT" layoutX="39.0" layoutY="532.0" size="20" />
